fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/Educational_Record_Member__c.object-meta.xml
<CustomObject>
    <label>Educational Record Member</label>
    <nameField>
        <displayFormat>ERM-{00000}</displayFormat>
        <label>Educational Record Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Educational Record Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>