fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Name__c</fullName>
    <formula>$User.FirstName +&apos; &apos;+  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>