fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/Customer_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Name__c</fullName>
    <formula>Education_Record__r.Account_Facility__r.Customer_Group_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Group Name</label>
    <type>Text</type>
</CustomField>