fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/Education_Record__c.field-meta.xml
<CustomField>
    <fullName>Education_Record__c</fullName>
    <label>Education Record</label>
    <referenceTo>Education_Record__c</referenceTo>
    <relationshipLabel>Educational Record Members</relationshipLabel>
    <relationshipName>Educational_Record_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>