fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ER_Account_Number__c</fullName>
    <formula>Education_Record__r.Account_Facility__r.SAP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Account Number</label>
    <type>Text</type>
</CustomField>