fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Account_Revenue__c.field-meta.xml
<CustomField>
    <fullName>ER_Account_Revenue__c</fullName>
    <formula>Education_Record__r.Account_Facility__r.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Account Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>