fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Account_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>ER_Account_Sales_Org__c</fullName>
    <formula>Education_Record__r.Account_Facility__r.Sales_Org__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Account Sales Org</label>
    <type>Text</type>
</CustomField>