fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ER_Business_Unit__c</fullName>
    <formula>TEXT(Education_Record__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Business Unit</label>
    <type>Text</type>
</CustomField>