fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>ER_Contact_Country__c</fullName>
    <formula>Contact__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Contact Country</label>
    <type>Text</type>
</CustomField>