fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>ER_Contact_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Contact Email</label>
    <type>Text</type>
</CustomField>