fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ER_Contact_First_Name__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Contact First Name</label>
    <type>Text</type>
</CustomField>