fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>ER_Contact_Phone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Contact Phone</label>
    <type>Text</type>
</CustomField>