fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Contact_Role_Title__c.field-meta.xml
<CustomField>
    <fullName>ER_Contact_Role_Title__c</fullName>
    <formula>TEXT(Contact__r.Position_Job_Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Contact Role/Title</label>
    <type>Text</type>
</CustomField>