fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>ER_Opportunity_Name__c</fullName>
    <formula>Education_Record__r.Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Opportunity Name</label>
    <type>Text</type>
</CustomField>