fullSandbox11072023/force-app/main/default/objects/Educational_Record_Member__c/fields/ER_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>ER_Program_Type__c</fullName>
    <formula>Education_Record__r.Program_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ER Program Type</label>
    <type>Text</type>
</CustomField>